feat: Adicionando texto na página index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Mudei o titulo</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas finibus lectus ipsum, sed pretium elit scelerisque ac. Curabitur orci augue, porta in mi at, euismod convallis tellus. Sed a metus in arcu fermentum rutrum et in ligula. Suspendisse rhoncus magna eget sollicitudin egestas. Nullam id maximus velit, finibus tristique velit. Etiam eu consectetur nunc. Duis efficitur ac mi ut interdum. Sed elementum justo sem. Mauris consectetur rutrum felis, sed semper lorem tincidunt vitae. Nullam nec erat lacinia, egestas lectus a, iaculis nisi. Proin tincidunt nunc facilisis cursus condimentum. Cras et metus tempor, posuere eros ut, auctor quam. Vestibulum quis lacus vulputate, eleifend sapien ac, semper ante. Vivamus tristique nisl vel justo vehicula feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    </p>
 </body> 
 </html>
